[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-index-mcp"
version = "0.1.0"
description = "MCP server for market index data (S&P500, NASDAQ, etc.)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
market-index-mcp = "market_index_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/market_index_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
